fix: exclude deprecations from Yarn Berry audit results (#8380)
Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>